--- a/views/classy_cate.less
+++ b/views/classy_cate.less
@@ -66,3 +66,14 @@ th.grade-column {
   width: 20%;
   min-width: 130px
 }
+
+#grading-schema-modal {
+  width: 300px;
+  margin-left: -150px;
+  .close {
+    margin-top: -5px;
+  }
+  .progress {
+    margin-bottom: 0px;
+  }
+}
