Documents doesn't work, disabling

--- a/views/main_page.haml
+++ b/views/main_page.haml
@@ -98,7 +98,7 @@
             %i.icon-key>
             \ 
           .list-text Department Grading Schema
-      %li
+      %li.disabled
         %a#cc-other-documentation{:href => "#"}
           .list-icon-container
             %i.icon-file-alt>
