Add Facebook motto for inspiration
Obviously this is trolling, add it if you want :)

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -45,6 +45,6 @@
       %a{:href => "http://www.github.com/peterhamilton"}
         %i.icon-github &nbsp;
     %p
-      Help lessen the pain - &nbsp;
+      This journey 1% finished. Help lessen the pain - &nbsp;
       %a{:href => "https://github.com/PeterHamilton/classy-cate"}
         %i.icon-github-alt
