Implemented simple timetable view.
Changes
=======
1. Implemented a timetable view based on tables. Tried aping the grades
   page layout for consistency. As far as I can tell, the scraper works
   fine- all my exercises are correctly timestamped.
2. Changed tabs to spaces, and width to 2 (erm, err, sorry...)
3. Moved timeline.css into the .less file to for use layer in
   development

--- a/views/exercises_page.haml
+++ b/views/exercises_page.haml
@@ -1,3 +1,22 @@
 .row
   .span12
     %h2{:id => "term_title"} Timetable of Exercises
+
+
+%table#exercises_template.hidden.module_table.table-striped.table-bordered
+  %tr
+    %th ID
+    %th Name
+    %th Set On
+    %th Due On
+    %th Spec Link
+    %th Given link
+
+%table
+  %tr#exercise_row_template.hidden
+    %td.id NA
+    %td.name NA
+    %td.set NA
+    %td.due NA
+    %td.spec NA
+    %td.given NA
