--- a/views/classy_cate.coffee.erb
+++ b/views/classy_cate.coffee.erb
@@ -399,6 +399,12 @@ populate_exercises_page = (vars) ->
       id_cell.html('{'+ex.id+':'+ex.type+'}')
     if /\S/.test(ex.name)
       name_cell = row.find('td.name').text(ex.name)
+      
+      if ex.handin?
+        name_cell.text(name_cell.text() + ' - ')
+        handin_anchor = $(document.createElement('a'))
+          .attr('href',ex.handin).html('Hand in').appendTo(name_cell)
+        handin_anchor.addClass(if ex.due > (new Date()) then 'handin_link' else 'late_handin')
     row.find('td.set').text(format_date ex.start)
     row.find('td.due').text(format_date ex.end)
 
@@ -413,7 +419,7 @@ populate_exercises_page = (vars) ->
   destination_div = $('#page-content')
   modules = vars.modules
   $('#term_title').text('Timetable - ' + vars.term_title)
-  
+
   for module in (m for m in modules when m.exercises[0]?) # Ignore empty modules
     module_header = $('<h3>' + module.id + ' - ' + module.name + ' - </h3>')
     $('<a/>').attr('href', module.notesLink).html('Notes').appendTo(module_header)
@@ -514,7 +520,6 @@ load_exercises_page = (e, fallback) ->
   period = parseInt href.split('period=')[1][0]
   if fallback?
     href = href.replace(('period=' + period),('period=' + (period - 1)))
-  if fallback then console.log href
   isHoliday = (period) -> period%2 == 0
   load_cate_page href, (body) ->
     exercise_page_vars = extract_exercise_page_data body
