--- a/views/exercises_page.haml
+++ b/views/exercises_page.haml
@@ -1,6 +1,7 @@
 .row
   .span12
-    %h2{:id => "term_title"} Timetable of Exercises
+    %h2{:id => "term_title"} 
+      Timetable of Exercises
 
 
 %table#exercises_template.hidden.module_table.table-striped.table-bordered
