Added next/prev buttons for exercise timetable

--- a/views/classy_cate.less
+++ b/views/classy_cate.less
@@ -96,3 +96,7 @@ td.set, td.due, td.spec, td.given {
   text-align : center;
   width : 13.75%;
 }
+
+.exercise-navigation-btn i {
+  line-height: 20px !important;
+}
