--- a/views/classy_cate.user.js.erb
+++ b/views/classy_cate.user.js.erb
@@ -2,15 +2,15 @@
 // @name         Classy CATE
 // @author       Peter Hamilton
 // @description  CATE Hurts eyes. This makes it hurt them less.
-// @version 1.2
+// @version <%= settings.userscript_version %>
 // @match https://cate.doc.ic.ac.uk/*
 // ==/UserScript==
 
 function main() {
-    window.classy_cate_script_version = "1.2";
+    window.classy_cate_script_version = "<%= settings.userscript_version %>";
     $('head').append('<script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>');
-    //$('head').append('<script type="text/javascript" src="https://localhost:4567/classy-cate.js"></script>');  //testing
     $('head').append('<script type="text/javascript" src="https://classy-cate.herokuapp.com/classy-cate.js"></script>');
+    //$('head').append('<script type="text/javascript" src="https://localhost:4567/classy-cate.js"></script>');  //dev mode
 }
 
 // a function that loads jQuery and calls a callback function when jQuery has finished loading
