--- a/views/exercises_page.haml
+++ b/views/exercises_page.haml
@@ -2,7 +2,7 @@
   .span12
     %h2
       %span{:id => "term_title"} Timetable of Exercises
-      %div{:style => "display:inline; left:90%; margin-top:4px; position:absolute"}
+      %div.term-navigation
         %span.btn.exercise-navigation-btn{:id => "back_term_btn", :style => "margin-right:14px"}
           %i.icon-double-angle-left
         %span.btn.exercise-navigation-btn{:id => "next_term_btn"}
