--- a/views/classy_cate.coffee.erb
+++ b/views/classy_cate.coffee.erb
@@ -35,6 +35,7 @@ text_extract = (html) ->
   html.text().trim().replace(/(\r\n|\n|\r)/gm,"");
 
 load_cate_page = (url, callback) ->
+  console.log url
   $.ajax
     type: 'GET'
     url: url
@@ -274,6 +275,41 @@ extract_exercise_page_data = (html) ->
     term_title : term_title
   }
 
+
+# Notes Page for Module
+# html - A jQuery object representing the page body
+extract_notes_page_data = (html) ->
+  
+  process_notes_rows = (html) ->
+    html.find('table [cellpadding="3"]').find('tr')[1..]
+
+  notes = []
+  for row in ($(r) for r in process_notes_rows html)
+    if $(row.find('td:eq(1) a')).attr('href')?
+      notes.push {
+        title : row.find('td:eq(1)').text()
+        link : $(row.find('td:eq(1) a')).attr('href')
+      }
+
+  get_notes_grid = (notes) ->
+    table = $('<table/>').addClass('module_table table-striped table-bordered')
+    table.append $('<tr/>').html('<th class="id">No.</th><th>Title</th>')
+    for note,i in notes
+      note_link = document.createElement('a')
+      note_link.setAttribute('href',note.link)
+      $(note_link).html(note.title)
+      link_cell = $(document.createElement('td')).append(note_link)
+        .css('padding-left','5px')
+      id_cell = $(document.createElement('td')).html(i).css('text-align','center')
+      row = $(document.createElement('tr'))
+      id_cell.appendTo(row)
+      link_cell.appendTo(row)
+      table.append(row)
+    table.attr('id','notesContent').appendTo $('body')
+    return table
+
+  return get_notes_grid notes
+
 # Grades/Student Record Page
 # html - A jQuery object representing the page body
 extract_grades_page_data = (html) ->
@@ -425,8 +461,12 @@ populate_exercises_page = (vars) ->
     module_header = $('<h3>' + module.id + ' - ' + module.name + '</h3>')
 
     if module.notesLink?
-      module_header.text(module_header.text() + " - ")
-      $('<a/>').attr('href', module.notesLink).html('Notes').appendTo(module_header)
+      note_link = $('<a/>').attr('lead',module.notesLink)
+        .html('Notes').bind 'click', ->
+          href = $(this).attr 'lead'
+          populate_notes_div (load_cate_page href, extract_notes_page_data)
+      module_header.text(module_header.text() + " - ").append(note_link)
+      #attr('href', module.notesLink)
 
     module_table = $('#exercises_template').clone().removeClass('hidden').css('width','100%')
     for exercise in module.exercises
@@ -440,6 +480,21 @@ populate_exercises_page = (vars) ->
   $('#next_term_btn').bind 'click', ->
       if PERIOD != 6 then load_exercises_page null, null, 1
 
+populate_notes_div = (id) ->
+
+  create_notes = ->
+    notes_content = $('#notesContent')
+    close_notes = ->
+      $('#notesContent').animate {opacity : 0}, { complete: -> $(@).remove() }
+      $('#fade').fadeOut {duration : 300, complete : -> $(@).remove() }
+    $('#notesContent').delay(400).fadeIn()
+    $("#fade").click -> close_notes notes_content
+
+  black_out = ->
+    $("body").prepend '<div id="fade"></div>'
+    $("#fade").animate {opacity: 0.8},{complete: create_notes()}
+
+  black_out()
 
 populate_grades_page = (vars) ->
 
@@ -557,9 +612,9 @@ load_exercises_page = (e, fallback, shifting) ->
       noOfExercises = 0
       for m in exercise_page_vars.modules
         noOfExercises += m.exs.length if m.exs?
-      if noOfExercises == '0'
+      if noOfExercises == 0
         go_forth_and_multiply = false
-        load_exercises_page e, true
+        load_exercises_page e, true, null
     if go_forth_and_multiply
       populate_html('#page-content', EXERCISES_PAGE_HTML) 
       populate_exercises_page(exercise_page_vars)
