--- a/views/classy_cate.less
+++ b/views/classy_cate.less
@@ -101,6 +101,27 @@ td.set, td.due, td.spec, td.given {
   line-height: 20px !important;
 }
 
+#fade {
+  background-color:black;
+  position:fixed; top:0; left:0;
+  width:100%; height:100%;
+  opacity:0; z-index:1;
+}
+
+#notesContent {
+  background : white;
+  position:absolute;
+  width:500px; top:20%;left:50%;
+  margin-left:-250px;
+  box-shadow: 0 0 20px black; z-index:2;
+}
+
+#notesContent th {
+  height : 35px;
+}
+#notesContent th.id {
+  width : 25%;
+}
 .term-navigation {
   margin-top: 4px;
   float: right;
