Made the notes link have a nicer hover state

--- a/views/classy_cate.coffee.erb
+++ b/views/classy_cate.coffee.erb
@@ -461,9 +461,10 @@ populate_exercises_page = (vars) ->
     module_header = $('<h3>' + module.id + ' - ' + module.name + '</h3>')
 
     if module.notesLink?
-      note_link = $('<a/>').attr('lead',module.notesLink)
-        .html('Notes').bind 'click', ->
-          href = $(this).attr 'lead'
+      note_link = $('<a/>').attr('href',module.notesLink)
+        .html('Notes').bind 'click', (e) ->
+          e.preventDefault()
+          href = $(this).attr 'href'
           populate_notes_div (load_cate_page href, extract_notes_page_data)
       module_header.text(module_header.text() + " - ").append(note_link)
       #attr('href', module.notesLink)
