Modified notes to use boostrap modal, more logical processing order. Removed logs

--- a/views/classy_cate.less
+++ b/views/classy_cate.less
@@ -123,7 +123,12 @@ td.set, td.due, td.spec, td.given {
 #notesContent th.id {
   width : 25%;
 }
+
 .term-navigation {
   margin-top: 4px;
   float: right;
+}
+
+.wide_table {
+  width: 100%;
 }
