--- a/views/classy_cate.coffee.erb
+++ b/views/classy_cate.coffee.erb
@@ -35,7 +35,6 @@ text_extract = (html) ->
   html.text().trim().replace(/(\r\n|\n|\r)/gm,"");
 
 load_cate_page = (url, callback) ->
-  console.log url
   $.ajax
     type: 'GET'
     url: url
@@ -124,12 +123,12 @@ extract_main_page_data = (html) ->
 # html - A jQuery object representing the page body
 extract_exercise_page_data = (html) ->
 
-  # Extracts full title e.g. Spring Term 2012-2013 
+  # Extracts full title e.g. Spring Term 2012-2013
   extract_term_title = (html) ->
     html.find('tr').eq(0).find('h1').eq(0).text()
 
   # Converts a CATE style date into a JS Date object
-  # e.g. '2013-1-7' -> Mon Jan 07 2013 00:00:00 GMT+0000 (GMT) 
+  # e.g. '2013-1-7' -> Mon Jan 07 2013 00:00:00 GMT+0000 (GMT)
   parse_date = (input) ->
     [year, month, day] = input.match(/(\d+)/g)
     new Date(year, month - 1, day) # JS months index from 0
@@ -173,7 +172,7 @@ extract_exercise_page_data = (html) ->
     #       e.g over new year/christmas?
 
     [first_month, others..., last_month] = extract_months $(fullTable).find('tr').eq(0)
-    
+
     year = if first_month < 9 then years[1] else years[0]
 
     day_headers = $(fullTable).find('tr').eq(2).find('th')
@@ -197,11 +196,11 @@ extract_exercise_page_data = (html) ->
       name : name.replace(/^\s+|\s+$/g, '')
       notesLink : cell.find('a').eq(0).attr('href')
     }
-    
-  # Add the parsed exercises to the given module 
+
+  # Add the parsed exercises to the given module
   # module - the module to attach the exercises to
   # exercise_cells - An array of cells (jQuery objects)
-  process_exercises_from_cells = (module, exercise_cells) -> 
+  process_exercises_from_cells = (module, exercise_cells) ->
     if not exercise_cells? then return null
     module.exercises ?= []
 
@@ -279,36 +278,30 @@ extract_exercise_page_data = (html) ->
 # Notes Page for Module
 # html - A jQuery object representing the page body
 extract_notes_page_data = (html) ->
-  
+
   process_notes_rows = (html) ->
     html.find('table [cellpadding="3"]').find('tr')[1..]
 
   notes = []
   for row in ($(r) for r in process_notes_rows html)
-    if $(row.find('td:eq(1) a')).attr('href')?
+    title = row.find('td:eq(1)').text()
+    link = $(row.find('td:eq(1) a'))
+    if link.attr('href')? && link.attr('href') != ''
       notes.push {
-        title : row.find('td:eq(1)').text()
-        link : $(row.find('td:eq(1) a')).attr('href')
+        type: "resource"
+        title: title
+        link: link.attr('href')
+      }
+    else if link.attr('onclick')? # Remote page
+      identifier = 341
+      href = "showfile.cgi?key=2012:3:#{identifier}:c3:NOTES:peh10"
+      notes.push {
+        type: "url"
+        title : title
+        link : href
       }
 
-  get_notes_grid = (notes) ->
-    table = $('<table/>').addClass('module_table table-striped table-bordered')
-    table.append $('<tr/>').html('<th class="id">No.</th><th>Title</th>')
-    for note,i in notes
-      note_link = document.createElement('a')
-      note_link.setAttribute('href',note.link)
-      $(note_link).html(note.title)
-      link_cell = $(document.createElement('td')).append(note_link)
-        .css('padding-left','5px')
-      id_cell = $(document.createElement('td')).html(i).css('text-align','center')
-      row = $(document.createElement('tr'))
-      id_cell.appendTo(row)
-      link_cell.appendTo(row)
-      table.append(row)
-    table.attr('id','notesContent').appendTo $('body')
-    return table
-
-  return get_notes_grid notes
+  return { notes: notes }
 
 # Grades/Student Record Page
 # html - A jQuery object representing the page body
@@ -432,11 +425,11 @@ populate_exercises_page = (vars) ->
           .attr('href',ex.handin).html('Hand in').appendTo(id_cell)
         handin_anchor.addClass(
           if ex.due > (new Date()) then 'handin_link btn btn-primary' else 'btn btn-danger late_handin')
-    else  
+    else
       id_cell.html('{'+ex.id+':'+ex.type+'}')
     if /\S/.test(ex.name)
       name_cell = row.find('td.name').text(ex.name)
-      
+
       if ex.handin?
         name_cell.text(name_cell.text() + ' - ')
         handin_anchor = $(document.createElement('a'))
@@ -445,11 +438,11 @@ populate_exercises_page = (vars) ->
     row.find('td.set').text(format_date ex.start)
     row.find('td.due').text(format_date ex.end)
 
-    if ex.spec? 
+    if ex.spec?
       (specCell = row.find('.spec')).text('')
       $(document.createElement('a')).attr('href',ex.spec).html('Spec Link').appendTo(specCell)
 
-    if ex.givens? 
+    if ex.givens?
       givensCell = row.find('.given').text('')
       $(document.createElement('a')).attr('href',ex.givens).html('Givens').appendTo(givensCell)
 
@@ -464,11 +457,14 @@ populate_exercises_page = (vars) ->
       note_link = $('<a/>').attr('href',module.notesLink).html('Notes')
       note_link.bind 'click', (e) ->
           e.preventDefault()
-          href = $(this).attr 'href'
-          populate_notes_div(load_cate_page href, extract_notes_page_data)
+          url = $(this).attr 'href'
+          load_cate_page url, (body) ->
+            notes_data = extract_notes_page_data(body)
+            populate_notes(notes_data, module)
+            $("#notes-modal").modal('show')
       module_header.text(module_header.text() + " - ").append(note_link)
 
-    module_table = $('#exercises_template').clone().removeClass('hidden').css('width','100%')
+    module_table = $('#exercises_template').clone().removeClass('hidden')
     for exercise in module.exercises
       row = $('#exercise_row_template').clone()
       row.removeClass('hidden').appendTo(module_table)
@@ -480,21 +476,17 @@ populate_exercises_page = (vars) ->
   $('#next_term_btn').bind 'click', ->
       if PERIOD != 6 then load_exercises_page null, null, 1
 
-populate_notes_div = (id) ->
+populate_notes = (notes_data, module) ->
+  module_title = 'Notes for ' + module.id + ' - ' + module.name
+  $("#notes-modal-header").text module_title
+  notes_body = $("#notes-modal-tbody")
+  notes_body.html('')
+  for note, i in notes_data.notes
+    row = $('<tr/>')
+    row.append("<td>#{i}</td>")
+    row.append("<td><a href='#{note.link}'>#{note.title}</a></td>")
+    notes_body.append(row)
 
-  create_notes = ->
-    notes_content = $('#notesContent')
-    close_notes = ->
-      $('#notesContent').animate {opacity : 0}, { complete: -> $(@).remove() }
-      $('#fade').fadeOut {duration : 300, complete : -> $(@).remove() }
-    $('#notesContent').delay(400).fadeIn()
-    $("#fade").click -> close_notes notes_content
-
-  black_out = ->
-    $("body").prepend '<div id="fade"></div>'
-    $("#fade").animate {opacity: 0.8},{complete: create_notes()}
-
-  black_out()
 
 populate_grades_page = (vars) ->
 
@@ -602,9 +594,9 @@ load_exercises_page = (e, fallback, shifting) ->
     href = get_url_for_period PERIOD
   else if fallback?
     href = alter_href_by href, (-1)
-  
+
   PERIOD = get_period_from_href href
-  
+
   load_cate_page href, (body) ->
     exercise_page_vars = extract_exercise_page_data body
     go_forth_and_multiply = true
@@ -616,7 +608,7 @@ load_exercises_page = (e, fallback, shifting) ->
         go_forth_and_multiply = false
         load_exercises_page e, true, null
     if go_forth_and_multiply
-      populate_html('#page-content', EXERCISES_PAGE_HTML) 
+      populate_html('#page-content', EXERCISES_PAGE_HTML)
       populate_exercises_page(exercise_page_vars)
 
 load_css = ->
@@ -629,7 +621,7 @@ load_css = ->
 initial_load = ->
   current_url = document.URL
   if /personal/i.test(current_url)
-    load_css()  
+    load_css()
     hash = (window.location.hash).replace('#', '')
 
     main_page_vars = extract_main_page_data($('body'))
