--- a/views/classy_cate.coffee.erb
+++ b/views/classy_cate.coffee.erb
@@ -139,14 +139,16 @@ extract_exercise_page_data = (html) ->
     body.find('h1').text()[-9..].split('-')
 
   extract_start_end_dates = (fullTable, years) ->
-
     # Converts a month into an int (indexed from 1)
     # e.g. "January" -> 1
     # month - Month name as a capitalised string
-    month_to_int = (month) ->
+    month_to_int = (m) ->
       months = ['January', 'February', 'March', 'April', 'May', 'June', 'July',
                 'August', 'September', 'October', 'November', 'December']
-      months.indexOf(month) + 1
+      return 6 if m == 'J'
+      rexp = new RegExp(m,'g')
+      for month,i in months
+            if rexp.test(month) then return i+1
 
     # Extracts months from table row
     # e.g. ["January", "February", "March"]
@@ -164,8 +166,8 @@ extract_exercise_page_data = (html) ->
     extract_days = (table_row) ->
       table_headers = ($(cell) for cell in table_row.find('th'))
       days_text = (c.text() for c in table_headers)
-      valid_days = (d for d in days_text when d.replace(/\s+/g, '') != '')
-      days_as_ints = valid_days.map parseInt
+      valid_days = (d for d in days_text when d.replace(/\s+/g, '') != '') 
+      days_as_ints = valid_days.map parseFloat # Parse int was going nuts, '23' -> 54???
       return days_as_ints
 
     # TODO: What if the timetable crosses year boundaries?
@@ -227,9 +229,15 @@ extract_exercise_page_data = (html) ->
         exercise_data = {
           id : id, type : type, start : new Date(current_date.getTime())
           end : end, moduleName : module.name
-          name : $(ex_cell).text()[(id.length + type.length + 2)..]
+          name : $(ex_cell).text()[(id.length + type.length + 2)..].replace(/^\s+|\s+$/g,'')
           mailto : mailto, spec : spec, givens : givens, handin : handin
+          toString : ->
+            '  id:"'+@id+'", type:"'+@type+'", name:"'+@name+'", handin:"'+@handin + '"' +
+            '\n  start: new Date('+@start.getTime()+'), end: new Date('+end.getTime()+')'+
+            '\n  spec:"'+spec+'", givens:"'+givens+
+            '"\n,'
         }
+
         module.exercises.push(exercise_data)
       current_date.setDate (current_date.getDate() + colSpan)
 
@@ -265,7 +273,7 @@ extract_exercise_page_data = (html) ->
 
   term_title = extract_term_title html
   timetable = (tb for tb in html.find('table') when $(tb).attr('border') == "0")
-  dates = extract_start_end_dates timetable, extract_academic_years html
+  dates = extract_start_end_dates timetable, extract_academic_years html   # WRONG
   modules = extract_module_exercise_data timetable
   m.exercises.sort ((a,b) -> if a.start < b.start then -1 else 1) for m in modules
   return {
@@ -410,6 +418,7 @@ populate_main_page = (vars) ->
   $('#cc-class-select').val(vars.default_class)
   $('#cc-period-select').val(vars.default_period)
 
+
 populate_exercises_page = (vars) ->
 
   format_date = (d) ->
@@ -444,6 +453,7 @@ populate_exercises_page = (vars) ->
   destination_div = $('#page-content')
   modules = vars.modules
   $('#term_title').text('Timetable - ' + vars.term_title)
+  
 
   for module in (m for m in modules when m.exercises[0]?) # Ignore empty modules
     module_header = $('<h3>' + module.id + ' - ' + module.name + '</h3>')
@@ -466,10 +476,26 @@ populate_exercises_page = (vars) ->
       populate_exercise_row row, exercise
     destination_div.append(module_header).append(module_table)
 
+    structure = {
+    title : ['id','type']
+    extendedTitle : ['name']
+    content :
+      names : ['HAND IN', 'SPEC', 'GIVENS']
+      links : ['handin', 'spec', 'givens']
+    }
+
+    if module.id == '113' 
+      console.log 'here we go'
+      console.log vars.start + ' ' + vars.end + ' ' + module.exercises.length
+      createTimeline
+        start : vars.start, end : vars.end, container : destination_div
+        structure : structure, moments : module.exercises
+
   $('#back_term_btn').bind 'click', ->
       if PERIOD != 1 then load_exercises_page null, null, -1
   $('#next_term_btn').bind 'click', ->
       if PERIOD != 6 then load_exercises_page null, null, 1
+
 
 populate_notes = (notes_data) ->
   notes_body = $("#notes-modal-tbody")
@@ -557,6 +583,7 @@ load_dashboard_page = (e) ->
     main_page_vars = extract_main_page_data(body)
     populate_html('#page-content', MAIN_PAGE_HTML)
     populate_main_page(main_page_vars)
+
 
 load_grades_page = (e) ->
   e.preventDefault() if e?
